Update executable name in Info.plist and Info.dev.plist, and modify index.html title and meta tag for Wails template. Add App Transport Security settings for local networking support.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/svg+xml" href="/wails.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
-    <title>Wails Template</title>
+    <meta name="wails-options" content="noautoinject" />
+    <title>GitEditor</title>
   </head>
   <body>
     <div id="root"></div>
